# carbs

./: .buildinfo  .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  README.rst  References.html  api.html  cicd.html  do_release.py  drone1.pkl  drone1_lla.csv  drone1_track.csv  drone2.pkl  drone2_lla.csv  drone2_track.csv  drone3.pkl  drone3_lla.csv  drone3_track.csv  drone4.pkl  drone4_lla.csv  drone4_track.csv  drone5.pkl  drone5_lla.csv  drone5_track.csv  drone6.pkl  drone6_lla.csv  drone6_track.csv  drone7.pkl  drone7_lla.csv  drone7_track.csv  drone8.pkl  drone8_lla.csv  drone8_track.csv  genindex.html  index.html  license.html  objects.inv  py-modindex.html  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: References.doctree  api.doctree  cicd.doctree  index.doctree  license.doctree  toolchain.doctree  usage.doctree
_autosummary/: carbs.html  caser.guidance.ELQR.html  caser.guidance.ELQROSPA.html  caser.guidance.gaussian_density_cost.html  caser.guidance.html  caser.html  caser.swarm_estimator.html  caser.swarm_estimator.slam.html  caser.swarm_estimator.tracker.CardinalizedPHD.html  caser.swarm_estimator.tracker.GSMGeneralizedLabeledMultiBernoulli.html  caser.swarm_estimator.tracker.GSMJointGeneralizedLabeledMultiBernoulli.html  caser.swarm_estimator.tracker.GeneralizedLabeledMultiBernoulli.html  caser.swarm_estimator.tracker.IMMCardinalizedPHD.html  caser.swarm_estimator.tracker.IMMGeneralizedLabeledMultiBernoulli.html  caser.swarm_estimator.tracker.IMMJointGeneralizedLabeledMultiBernoulli.html  caser.swarm_estimator.tracker.IMMProbabilityHypothesisDensity.html  caser.swarm_estimator.tracker.JointGeneralizedLabeledMultiBernoulli.html  caser.utilities.graphs.html  (+22 more)
(+321 files in other folders)
